--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,11 @@
     <string name="backbtn">back</string>
     <string name="saveToolbar">Save</string>
     <string name="menu_delete">Delete</string>
+    <string name="TermId">Term ID: </string>
+    <string name="termTitle">Title: </string>
+    <string name="StartDateLabel">Start Date:</string>
+    <string name="EndDateLabel">End Date: </string>
+    <string name="UntilDateLabel">Until</string>
+    <string name="shareViaEmail">Email</string>
 
 </resources>
