--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="CourseLabel">Course:</string>
     <string name="CourseListLabel">Where Used: </string>
     <string name="RemindMeLabel">Remind Me</string>
+    <string name="MentorNameLabel">Name: </string>\    <string name="EmailLabel">Email: </string>     <string name="PhoneLabel">Phone: </string>
 </resources>
